# docima

./: Cargo.toml  README.md  build-prerelease.rs  build.rs
.cargo/: config.toml
example/: Cargo.toml  README.md  build.rs
example/images/: plotters-histogram.html  square-random-pixels.html
example/src/: lib.rs
images/: plotters-histogram.html  square-random-pixels.html
src/: error.rs  lib.rs  utils.rs
