[package]
name = "docima"
description = "Generate images at build time & embed them in the Rust documentation"
version = "0.4.1-prerelease"
edition = "2018"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/docima"
documentation = "https://docs.rs/docima"
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
	"build.rs",
	"images/",
    "Cargo.toml",
	"LICENSE*",
	"README.md",
]
categories = ["rust-patterns", "development-tools::build-utils"]
keywords = ["image", "img", "rustdoc", "documentation", "base64"]

[dependencies]
data-encoding = "2.3.2"
png = "0.17.0"

[build-dependencies]
# docima = "0.4.1-prerelease" # we need to go (almost) recursive!
plotters = "0.3.1"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
