[package]
name = "docima"
description = "Generate images at build time & embed them in the Rust documentation"
version = "0.9.0"
edition = "2018"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/docima"
documentation = "https://docs.rs/docima"
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
	"build.rs",
	"images/",
    "Cargo.toml",
	"LICENSE*",
	"README.md",
]
categories = ["rust-patterns", "development-tools::build-utils"]
keywords = ["image", "img", "rustdoc", "documentation", "base64"]

[dependencies]
data-encoding = "2.3.2"
png = "0.17.0"

[build-dependencies]
# in order to avoid cargo complain about cyclic dependencies, docima must depend
# on a version of itself with a different minor version (the patch is not enough).
docima_builddep = { package = "docima", version = "0.8.1-builddep" }
plotters = "0.3.1"
rand = "0.8.4"
rand_xoshiro = "0.6.0"

[features]
# This will change the default of ImageFile `overwrite` to `false`.
# Note that this will never replace the manually specified setting via method.
not_default_overwrite = []

# This will only build the images when the following `doc` feature is also used.
build_when_doc = []

# This is intended to be used alongside the previous `build_when_doc` feature.
# In your crate you'll have to create a feature `doc = ["docima/doc"]`, and then
# use it when building the docs. E.g.: "cargo doc --features=doc".
doc = []

[lib]
doctest = false
